--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,20 @@
             <version>4.12</version>
         </dependency>
     </dependencies>
+
+    <project>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </project>
 </project>
